# technological-stack

./: .gitattributes  LICENSE  README.md
Comsol&CFD/lx-cfd-master/: .gitignore  CMakeLists.txt  README.md
Comsol&CFD/lx-cfd-master/LxCases/: Case0-Chang.msh  Case1-2Zone4w.msh  Case2-Cavity.msh
Comsol&CFD/lx-cfd-master/LxProj/: CMakeLists.txt  LxCodeUI.cpp  LxCodeUI.h
Comsol&CFD/lx-cfd-master/LxProj/P0Common/Class/: EnumsToString.h  IReset.h  LinkArray.cpp  LinkArray.h  QueueTool.cpp  QueueTool.h  ScalarTypes.h  StopWatch.h  TestClass.cpp  TestClass.h  ValueStateLog.cpp  ValueStateLog.h
Comsol&CFD/lx-cfd-master/LxProj/P0Common/Global/: AppRes.cpp  AppRes.h  ComputeTask.cpp  ComputeTask.h  ExcuteBase.h  ExcuteCenter.cpp  ExcuteCenter.h  IExcute.h  StepsCenter.cpp  StepsCenter.h
Comsol&CFD/lx-cfd-master/LxProj/P0Common/Interface/: ICalResidual.h  IConnectivityAnalyzableContact.h  IConnectivityAnalyzableZone.h  IInitializable.h
Comsol&CFD/lx-cfd-master/LxProj/P0Common/Static/: ComputeState.cpp  ComputeState.h  LxConsole.cpp  LxConsole.h  LxString.cpp  LxString.h  LxTool.cpp  (+5 more)
Comsol&CFD/lx-cfd-master/LxProj/P4Fields/: ContactCFDFields.cpp  ContactCFDFields.h  ZoneCFDFields.cpp  ZoneCFDFields.h
Comsol&CFD/lx-cfd-master/LxProj/P5Solver/: LinearSolver.cpp  LinearSolver.h  LinearSolverBase.cpp  LinearSolverBase.h  SolverTypes.h
Comsol&CFD/lx-cfd-master/LxProj/P6Algorithm/: SolveCenter.cpp  SolveCenter.h
Comsol&CFD/lx-cfd-master/LxProj/P7Monitor/: MonitorCenter.cpp  MonitorCenter.h
Comsol&CFD/lx-cfd-master/流形CFD开发文档/: 流形CFD开发文档.docx  流形CFD数据结构（wps打开）.pos
(+467 files in other folders)
